--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
 asgiref==3.5.2
+autopep8==1.7.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+dj-database-url==1.0.0
 Django==4.1.1
+django-cors-headers==3.13.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+idna==3.4
+psycopg2==2.9.3
+pycodestyle==2.9.1
+pycoingecko==3.0.0
 pytz==2022.2.1
+requests==2.28.1
 sqlparse==0.4.3
+toml==0.10.2
 tzdata==2022.4
+urllib3==1.26.12
+whitenoise==6.2.0
