--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.15
 django-cors-headers==3.13.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+gunicorn==20.1.0
 idna==3.4
 psycopg2==2.9.3
 pycodestyle==2.9.1
