--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.1.1
 dj-database-url==1.0.0
 Django==3.2.15
 django-cors-headers==3.13.0
+django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 gunicorn==20.1.0
@@ -14,6 +15,7 @@ pycodestyle==2.9.1
 pycoingecko==3.0.0
 pytz==2022.2.1
 requests==2.28.1
+six==1.16.0
 sqlparse==0.4.3
 toml==0.10.2
 tzdata==2022.4
